tests/negative/test_raw_memb_not_raw_ref.orb
fnc main () () {
    eval (sym (x 0));
    eval (sym (a \(,x)));
    = (. a 0) 99;
};